# ReaderReady

./: .gitignore  README.md
Reader/: CMakeLists.txt
Reader/src/: ccid.cpp  ccid.h  main.cpp
acr38usb/: CMakeLists.txt
acr38usb/include/: ReaderApi.h  ReaderApi.hpp
acr38usb/src/: acr38usb.cpp  acr38usb.h  exports.cpp
rik2gui/: CMakeLists.txt  mainwindow.ui
rik2gui/assets/: sample_rik2_layout.json
rik2gui/include/: Hex.hpp  ReaderSession.hpp  Rik2Model.hpp  Rik2Worker.hpp
rik2gui/src/: ReaderSession.cpp  Rik2Model.cpp  Rik2Worker.cpp  main.cpp  mainwindow.cpp  mainwindow.hpp
